:bug: fix word wrapping

--- a/src/webview/note/style.css
+++ b/src/webview/note/style.css
@@ -20,6 +20,7 @@ code {
   margin: 0;
   white-space: pre-wrap;
   color: unset;
+  word-break: break-word;
 }
 
 pre {
